--- a/store.html
+++ b/store.html
@@ -870,7 +870,7 @@ html, body {
 
   <!-- ================= MID BANNER ================= -->
  <div class="drop-banner">
-    <div class="banner-placeholder">PATCH BABY — STREETWEAR DROP</div>
+    <div class="images/streetwearbanner.png">PATCH BABY — STREETWEAR DROP</div>
 </div>
 
   <!-- PATCH BABY JOGGER — WOMEN -->
@@ -1514,7 +1514,7 @@ html, body {
 
   <!-- ================= MID BANNER ================= -->
  <div class="drop-banner">
-    <div class="banner-placeholder">PATCH BABY — STREETWEAR DROP</div>
+    <div class="images/streetwearbanner.png">PATCH BABY — STREETWEAR DROP</div>
 </div>
 
   <!-- PATCH BABY JOGGER — WOMEN -->
@@ -1838,7 +1838,7 @@ html, body {
 
      <!-- ================= Epok Banner ================= -->
 <section class="about-banner">
-    <img src="images/titlebanner.png" alt="EPÒK — Survive. Rise. Become.">
+    <img src="images/survivebanner.png" alt="EPÒK — Survive. Rise. Become.">
 </section>
     
         
