--- a/store.html
+++ b/store.html
@@ -867,12 +867,12 @@ html, body {
 </div>
 
 
-
   <!-- ================= MID BANNER ================= -->
- <div class="drop-banner">
-    <div class="images/streetwearbanner.png">PATCH BABY — STREETWEAR DROP</div>
-</div>
+<section class="about-banner">
+    <img src="images/streetwearbanner.png" alt="EPÒK — Survive. Rise. Become.">
+</section>
 
+    
   <!-- PATCH BABY JOGGER — WOMEN -->
   <h2 class="drop-title">PATCH BABY STREETWEAR — WOMEN</h2>
 
@@ -1513,9 +1513,9 @@ html, body {
 
 
   <!-- ================= MID BANNER ================= -->
- <div class="drop-banner">
-    <div class="images/streetwearbanner.png">PATCH BABY — STREETWEAR DROP</div>
-</div>
+<section class="about-banner">
+    <img src="images/streetwearbanner.png" alt="EPÒK — Survive. Rise. Become.">
+</section>
 
   <!-- PATCH BABY JOGGER — WOMEN -->
   <h2 class="drop-title">PATCH BABY STREETWEAR — WOMEN</h2>
