--- a/music.html
+++ b/music.html
@@ -551,9 +551,9 @@ html, body {
 <div class="album-player" id="albumPlayer">
 
   <!-- COVER STATE -->
-  <div class="album-cover" id="albumCover">
-    ALBUM COVER PLACEHOLDER
-  </div>
+ <div class="album-cover" id="albumCover">
+  <img src="images/album.jpg" alt="Album Cover">
+</div>
 
 
     
@@ -561,7 +561,8 @@ html, body {
   <!-- PLAYER STATE -->
   <div class="player-ui" id="playerUI">
     <div class="record">
-  <div class="record-art">ART</div>
+ <div class="record-art">
+  <img src="images/spin.png" alt="Record Label">
 </div>
 
 
