--- a/music.html
+++ b/music.html
@@ -620,7 +620,7 @@ html, body {
     <button class="track-play">Track Lyrixx6</button>
   </div>
 
-<a class="track-download" href="music/name.mp3" download>
+<a class="track-download" href="music/Lyrixx6.mp3" download>
     ⬇
     <span class="download-text">DOWNLOAD</span>
   </a>
