--- a/music.html
+++ b/music.html
@@ -280,6 +280,22 @@ html, body {
   text-align: center;
 }
 
+.player-ui {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.record {
+  margin-bottom: 24px;
+}
+
+.player-controls {
+  margin-top: 12px;
+}
+
+    
+
 .album-cover {
   width: 320px;
   height: 320px;
@@ -593,6 +609,8 @@ html, body {
 
 </div>
 <!-- ===== END ALBUM / PLAYER ===== -->
+
+
 
     
 
