--- a/music.html
+++ b/music.html
@@ -281,7 +281,10 @@ html, body {
 }
 
 .player-ui {
-  display: flex;
+  display: none;
+  opacity: 0;
+  transition: opacity 0.6s ease;
+
   flex-direction: column;
   align-items: center;
 }
@@ -327,7 +330,7 @@ html, body {
 }
 
 .album-player.active .player-ui {
-  display: block;
+  display: flex;
   opacity: 1;
 }
 
