--- a/music.html
+++ b/music.html
@@ -597,7 +597,8 @@ html, body {
 
   <div class="player-controls">
     <button id="prevTrack">⏮</button>
-    <button id="playPause">▶</button>
+    <button id="Play">▶</button>
+    <button id="Pause">||</button>  
     <button id="nextTrack">⏭</button>
   </div>
 
