--- a/music.html
+++ b/music.html
@@ -651,7 +651,7 @@ html, body {
     <button class="track-play">name</button>
   </div>
 
- <a class="track-download" href="music/name.mp3" download>
+ <a class="track-download" href="music/Bullshittin.mp3" download>
     ⬇
     <span class="download-text">DOWNLOAD</span>
   </a>
@@ -667,7 +667,7 @@ html, body {
     <button class="track-play">name</button>
   </div>
 
- <a class="track-download" href="music/name.mp3" download>
+ <a class="track-download" href="music/PatchBaby.mp3" download>
     ⬇
     <span class="download-text">DOWNLOAD</span>
   </a>
