--- a/music.html
+++ b/music.html
@@ -832,7 +832,7 @@ html, body {
 
     
 <div class="track-row" data-src="music/Look.mp3">
-  <span>14</span>music/Shittalker.mp3
+  <span>14</span>
 
   <div class="track-info">
     <div class="track-art">ART</div>
