--- a/music.html
+++ b/music.html
@@ -631,7 +631,7 @@ html, body {
   <span>01</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">OpenMic</button>
   </div>
 
@@ -647,7 +647,7 @@ html, body {
   <span>02</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Bullshittin</button>
   </div>
 
@@ -663,7 +663,7 @@ html, body {
   <span>03</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">PatchBaby</button>
   </div>
 
@@ -678,7 +678,7 @@ html, body {
   <span>04</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Look</button>
   </div>
 
@@ -693,7 +693,7 @@ html, body {
   <span>05</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Indo</button>
   </div>
 
@@ -709,7 +709,7 @@ html, body {
   <span>06</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">StreetLies</button>
   </div>
 
@@ -725,7 +725,7 @@ html, body {
   <span>07</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">MagillaGorilla</button>
   </div>
 
@@ -741,7 +741,7 @@ html, body {
   <span>08</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">BluPaws</button>
   </div>
 
@@ -756,7 +756,7 @@ html, body {
   <span>09</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">SnoopyBlu</button>
   </div>
 
@@ -772,7 +772,7 @@ html, body {
   <span>10</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">4DaBirdz</button>
   </div>
 
@@ -788,7 +788,7 @@ html, body {
   <span>11</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Shotz2DaBrain</button>
   </div>
 
@@ -804,7 +804,7 @@ html, body {
   <span>12</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">SayItWitUrChest</button>
   </div>
 
@@ -820,7 +820,7 @@ html, body {
   <span>13</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">BitchPlease</button>
   </div>
 
@@ -835,7 +835,7 @@ html, body {
   <span>14</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">ShitTalker</button>
   </div>
 
@@ -850,7 +850,7 @@ html, body {
   <span>15</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Lyrixx6</button>
   </div>
 
@@ -866,7 +866,7 @@ html, body {
   <span>16</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">DaysOfOurLives</button>
   </div>
 
@@ -882,7 +882,7 @@ html, body {
   <span>17</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Juice</button>
   </div>
 
@@ -898,7 +898,7 @@ html, body {
   <span>18</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">MjBad</button>
   </div>
 
@@ -913,7 +913,7 @@ html, body {
   <span>19</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">CntFeelMyFace</button>
   </div>
 
@@ -928,7 +928,7 @@ html, body {
   <span>20</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">SoundLike50</button>
   </div>
 
@@ -944,7 +944,7 @@ html, body {
   <span>21</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Famous</button>
   </div>
 
@@ -959,7 +959,7 @@ html, body {
   <span>22</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">Do4Luv</button>
   </div>
 
@@ -975,7 +975,7 @@ html, body {
   <span>23</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">4Casey</button>
   </div>
 
@@ -991,7 +991,7 @@ html, body {
   <span>24</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">SaturdayNight</button>
   </div>
 
@@ -1007,7 +1007,7 @@ html, body {
   <span>25</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">SweetMonae</button>
   </div>
 
@@ -1021,7 +1021,7 @@ html, body {
   <span>26</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">DiamnodFlo</button>
   </div>
 
@@ -1035,7 +1035,7 @@ html, body {
   <span>27</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">ClownMusic</button>
   </div>
 
@@ -1050,7 +1050,7 @@ html, body {
   <span>28</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">HellMary</button>
   </div>
 
@@ -1065,7 +1065,7 @@ html, body {
   <span>29</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">WalkItOut</button>
   </div>
 
@@ -1081,7 +1081,7 @@ html, body {
   <span>30</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">CripBlu</button>
   </div>
 
@@ -1097,7 +1097,7 @@ html, body {
   <span>31</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">ErDay</button>
   </div>
 
@@ -1113,7 +1113,7 @@ html, body {
   <span>32</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">DiamnodFlo</button>
   </div>
 
@@ -1124,28 +1124,13 @@ html, body {
 </div>
 
 
-<div class="track-row" data-src="music/StreetLies.mp3">
+
+<div class="track-row" data-src="music/theme.mp3">
   <span>33</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
-    <button class="track-play">StreetLies</button>
-  </div>
-
-<a class="track-download" href="music/StreetLies.mp3" download>
-    ⬇
-    <span class="download-text">DOWNLOAD</span>
-  </a>
-</div>
-
-
-
-<div class="track-row" data-src="music/theme.mp3">
-  <span>34</span>
-
-  <div class="track-info">
-    <div class="track-art">ART</div>
-    <button class="track-play">StreetCries</button>
+    <div class="images/album.jpg">ART</div>
+    <button class="track-play">PanthersFlo</button>
   </div>
 
 <a class="track-download" href="music/theme.mp3" download>
@@ -1156,10 +1141,10 @@ html, body {
 
 
 <div class="track-row" data-src="music/LastCall.mp3">
-  <span>35</span>
+  <span>34</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">LasCall</button>
   </div>
 
@@ -1171,10 +1156,10 @@ html, body {
 
 
 <div class="track-row" data-src="music/Floetry.mp3">
-  <span>36</span>
+  <span>35</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
+    <div class="images/album.jpg">ART</div>
     <button class="track-play">PoeticFlo</button>
   </div>
 
@@ -1187,11 +1172,11 @@ html, body {
 
 
 <div class="track-row" data-src="music/Pain.mp3">
-  <span>37</span>
+  <span>36</span>
 
   <div class="track-info">
-    <div class="track-art">ART</div>
-    <button class="track-play">StreetCries</button>
+    <div class="images/album.jpg">ART</div>
+    <button class="track-play">Pain</button>
   </div>
 
 <a class="track-download" href="music/Pain.mp3" download>
