--- a/index.html
+++ b/index.html
@@ -6,240 +6,280 @@
 <title>EPòꓘ | Enter Your Era</title>
 
 <style>
-* { margin:0; padding:0; box-sizing:border-box; }
-html, body { width:100%; height:100%; background:#000; overflow:hidden; }
 
-/* ============ DOUBLE ROYAL FRAME (FULL PAGE) ============ */
-.page-frame-outer {
-    position:fixed;
-    inset:0;
-    padding:22px;
-    border:2px solid rgba(212,175,55,0.65);
-    overflow:hidden;
-    pointer-events:none;
-    z-index:50;
+/* ======================================================
+   MOBILE-FIRST RESET
+====================================================== */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  background: #000;
+  color: #f2f2f2;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  overflow-x: hidden;
+}
+
+/* ======================================================
+   VARIABLES
+====================================================== */
+
+:root {
+  --gold: rgba(212,175,55,1);
+  --goldSoft: rgba(212,175,55,0.55);
+  --goldFaint: rgba(212,175,55,0.25);
+  --navHeight: 64px;
+}
+
+/* ======================================================
+   FRAME SYSTEM (MOBILE FIRST)
+====================================================== */
+
+.page-frame-outer {
+  position: fixed;
+  inset: 0;
+  padding: 12px;
+  border: 1px solid var(--goldSoft);
+  pointer-events: none;
+  z-index: 50;
+  overflow: hidden;
+}
+
+/* VERTICAL TEXT */
 .page-frame-outer::before,
 .page-frame-outer::after {
-    content:"SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
-    position:absolute;
-    top:22px;
-    bottom:22px;
-    width:22px;
-    writing-mode:vertical-rl;
-    font-size:0.65rem;
-    letter-spacing:0.35em;
-    color:#ffffff;
-    white-space:nowrap;
+  content: "SURVIVE • RISE • BECOME • STEP INTO YOUR EPÒK • ";
+  position: absolute;
+  top: 12px;
+  bottom: 12px;
+  width: 20px;
+  writing-mode: vertical-rl;
+  font-size: 0.5rem;
+  letter-spacing: 0.25em;
+  color: #fff;
+  white-space: nowrap;
 }
 
 .page-frame-outer::before {
-    left:1px;
-    animation:leftScroll 45s linear infinite;
+  left: 2px;
+  animation: leftScroll 45s linear infinite;
 }
 
 .page-frame-outer::after {
-    right:9px;
-    animation:rightScroll 45s linear infinite;
+  right: 6px;
+  animation: rightScroll 45s linear infinite;
 }
 
 @keyframes leftScroll {
-    from { transform:translateY(100%); }
-    to   { transform:translateY(-100%); }
+  from { transform: translateY(100%); }
+  to   { transform: translateY(-100%); }
 }
 
 @keyframes rightScroll {
-    from { transform:translateY(-100%); }
-    to   { transform:translateY(100%); }
+  from { transform: translateY(-100%); }
+  to   { transform: translateY(100%); }
 }
 
+/* ======================================================
+   ARABIC BORDER
+====================================================== */
+
 .arabic-border {
-    position:absolute;
-    bottom:6px;
-    left:0;
-    right:0;
-    font-size:0.7rem;
-    letter-spacing:0.45em;
-    color:#ffffff;
-    white-space:nowrap;
-    overflow:hidden;
+  position: absolute;
+  bottom: 6px;
+  left: 0;
+  right: 0;
+  font-size: 0.55rem;
+  letter-spacing: 0.28em;
+  color: #fff;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .arabic-border span {
-    display:inline-block;
-    padding-left:100%;
-    animation:arabic-scroll 18s linear infinite;
+  display: inline-block;
+  padding-left: 100%;
+  animation: arabic-scroll 18s linear infinite;
 }
 
 @keyframes arabic-scroll {
-    from { transform:translateX(0); }
-    to { transform:translateX(-100%); }
+  from { transform: translateX(0); }
+  to   { transform: translateX(-100%); }
 }
 
-/* ================= TOP NAV (ADDED) ================= */
+/* ======================================================
+   TOP NAV (MOBILE FIRST)
+====================================================== */
+
 .top-nav {
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:64px;
-    background:rgba(0,0,0,0.85);
-    backdrop-filter:blur(10px);
-    z-index:1000;
-    border-bottom:1px solid rgba(212,175,55,0.25);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: var(--navHeight);
+  background: rgba(0,0,0,0.85);
+  backdrop-filter: blur(10px);
+  border-bottom: 1px solid var(--goldFaint);
+  z-index: 1000;
+  display: flex;
+  align-items: center;
 }
 
 .nav-scroll {
-    width:100%;
-    height:100%;
-    overflow-x:auto;
-    overflow-y:hidden;
-    white-space:nowrap;
-    -webkit-overflow-scrolling:touch;
-    padding:0 6vw;
-    display:flex;
-    align-items:center;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 0 4vw;
 }
 
-.nav-scroll::-webkit-scrollbar { height:0px; }
-.nav-scroll { scrollbar-width:none; }
+.nav-scroll::-webkit-scrollbar { height: 0; }
 
 .nav-links {
-    display:inline-flex;
-    gap:26px;
-    align-items:center;
+  display: inline-flex;
+  gap: 20px;
+  align-items: center;
 }
 
 .nav-links a {
-    text-decoration:none;
-    color:#e8e4d8;
-    font-size:0.82rem;
-    letter-spacing:0.22em;
-    text-transform:uppercase;
-    padding:8px 4px;
-    opacity:0.85;
-}
-
-.nav-links a:hover {
-    color:#f3d688;
-    opacity:1;
+  text-decoration: none;
+  color: #e8e4d8;
+  font-size: 0.72rem;
+  letter-spacing: 0.22em;
+  text-transform: uppercase;
+  opacity: 0.85;
 }
 
 .nav-links a.featured {
-    opacity:1;
-    border:1px solid rgba(212,175,55,0.85);
-    padding:8px 12px;
-    color:#f3d688;
+  border: 1px solid var(--gold);
+  padding: 6px 10px;
+  color: #f3d688;
+  opacity: 1;
 }
 
-/* BACKGROUND */
+/* ======================================================
+   HERO BACKGROUND & CHARACTER (MOBILE FIRST)
+====================================================== */
+
 #hero-bg {
-    position:fixed;
-    inset:0;
-    background:url("./images/9378.png") center/100% 100% no-repeat;
-    opacity:0;
-    transition:opacity 1.4s ease;
-    z-index:1;
+  position: fixed;
+  inset: 0;
+  background: url("./images/9378.png") center / cover no-repeat;
+  opacity: 0;
+  transition: opacity 1.4s ease;
+  z-index: 1;
 }
 
-/* CHARACTER */
 #hero-character {
-    position:fixed;
-    inset:0;
-    width:100%;
-    height:100%;
-    object-fit:fill;
-    opacity:0;
-    transition:opacity 1.4s ease;
-    z-index:2;
-    pointer-events:none;
-    animation:cameraMove 14s ease-in-out infinite alternate;
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1.4s ease;
+  z-index: 2;
+  pointer-events: none;
+  animation: cameraMove 14s ease-in-out infinite alternate;
 }
 
 @keyframes cameraMove {
-    0% { transform:translate(0,0) scale(1); }
-    50% { transform:translate(-12px,-8px) scale(1.03); }
-    100% { transform:translate(10px,6px) scale(1.01); }
+  0%   { transform: translate(0,0) scale(1); }
+  50%  { transform: translate(-8px,-6px) scale(1.03); }
+  100% { transform: translate(6px,4px) scale(1.01); }
 }
 
-/* CREST */
+/* ======================================================
+   CREST + CTA
+====================================================== */
+
 #intro-crest {
-    position:fixed;
-    top:50%;
-    left:50%;
-    width:220px;
-    transform:translate(-50%,-50%);
-    filter:drop-shadow(0 0 20px #ffda44);
-    z-index:10;
-    cursor:pointer;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 170px;
+  transform: translate(-50%,-50%);
+  filter: drop-shadow(0 0 20px #ffda44);
+  z-index: 10;
+  cursor: pointer;
 }
 
 #click-here {
-    position:fixed;
-    top:calc(50% + 150px);
-    left:50%;
-    transform:translateX(-50%);
-    color:#fff;
-    letter-spacing:.2em;
-    z-index:10;
-    cursor:pointer;
+  position: fixed;
+  top: calc(50% + 120px);
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 0.85rem;
+  letter-spacing: 0.18em;
+  color: #fff;
+  z-index: 10;
+  cursor: pointer;
 }
 
+/* ======================================================
+   ANIMATIONS
+====================================================== */
+
 .heartbeat {
-    animation:beat 1s ease-in-out infinite;
+  animation: beat 1s ease-in-out infinite;
 }
 
 @keyframes beat {
-    0% { transform:translate(-50%,-50%) scale(1); }
-    30% { transform:translate(-50%,-50%) scale(1.22); }
-    60% { transform:translate(-50%,-50%) scale(1.05); }
-    100% { transform:translate(-50%,-50%) scale(1); }
+  0%   { transform: translate(-50%,-50%) scale(1); }
+  30%  { transform: translate(-50%,-50%) scale(1.22); }
+  60%  { transform: translate(-50%,-50%) scale(1.05); }
+  100% { transform: translate(-50%,-50%) scale(1); }
 }
 
-.fade-out { animation:fadeOut .9s forwards; }
+.fade-out {
+  animation: fadeOut .9s forwards;
+}
 
 @keyframes fadeOut {
-    from { opacity:1; }
-    to { opacity:0; }
+  from { opacity: 1; }
+  to   { opacity: 0; }
 }
 
-/* ================= MOBILE OPTIMIZATION ONLY ================= */
-@media (max-width:768px) {
+/* ======================================================
+   DESKTOP ENHANCEMENTS ONLY
+====================================================== */
 
-    #intro-crest {
-        width:170px;
-    }
+@media (min-width: 769px) {
 
-    #click-here {
-        top:calc(50% + 120px);
-        font-size:0.85rem;
-        letter-spacing:0.18em;
-    }
+  .page-frame-outer {
+    padding: 22px;
+    border-width: 2px;
+  }
 
-    .page-frame-outer {
-        padding:14px;
-    }
+  .page-frame-outer::before,
+  .page-frame-outer::after {
+    font-size: 0.65rem;
+    letter-spacing: 0.35em;
+  }
 
-    .page-frame-outer::before,
-    .page-frame-outer::after {
-        font-size:0.55rem;
-        letter-spacing:0.3em;
-    }
+  .arabic-border {
+    font-size: 0.7rem;
+    letter-spacing: 0.45em;
+  }
 
-    .arabic-border {
-        font-size:0.6rem;
-        letter-spacing:0.3em;
-    }
+  #intro-crest {
+    width: 220px;
+  }
 
-    /* ALLOW FULL IMAGE VISIBILITY FOR images/12.png */
-    img[src*="12.png"] {
-        object-fit:contain !important;
-        width:100%;
-        height:auto;
-    }
+  #click-here {
+    top: calc(50% + 150px);
+    font-size: 0.9rem;
+    letter-spacing: 0.22em;
+  }
+
 }
+
 </style>
+
 </head>
 
 <body>
